src/tests/testfiles/unary-operators/3.txt
testfiles/unary-operators/3.c:4:5: error: invalid operands to logical '!' (have 'int *', need 'int')
!ii;
^
